Fix `z-index`es

--- a/pages/s/[storyID]/edit/p/styles.module.scss
+++ b/pages/s/[storyID]/edit/p/styles.module.scss
@@ -31,6 +31,7 @@
 		top: 0;
 		margin: 16px 0;
 		padding: 8px 0;
+		z-index: 5;
 
 		&.stuck {
 			border-bottom: 1px solid rgba(128, 128, 128, 0.5);
