--- a/pages/user/[userID]/messages/styles.module.scss
+++ b/pages/user/[userID]/messages/styles.module.scss
@@ -1,7 +1,7 @@
 #messages-actions {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 5;
     background-color: inherit;
     margin-top: -12px;
     padding: 12px 0;
